--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1739,107 +1739,107 @@ stories:
   domain: http://www.thenewsherald.com/
   link: http://www.thenewsherald.com/opinion/christmas-is-not-secular-neither-is-santa-claus/article_c5eeb5a4-2431-11ea-bb8d-a363896f2b6d.html
 images:
-- name: meadowbutterfly-meadow-butterfly-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-atari-asteroids.jpg
-- name: san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
-- name: berlinwall2-berlinwall-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colored-circuits.jpg
-- name: copper-circuit-castle-on-the-hill-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-on-the-hill-windows.jpg
-- name: oldcabin-oldcabin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-oily-mcoilface.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-- name: death-valley-death-valley-national-park-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-marcel-duchamp.jpg
-- name: flower-barbed-wire-flower-barbed-wire-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alberto-giacometti.jpg
-- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-- name: adam-smith-adam-smith-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alien-goggles.jpg
-- name: gypsymosaic-gypsy-eyes-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
-- name: old-house-oldhouse-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-internet-numbers.jpg
-- name: old-barn-old-barn-1500-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-bright-sand.jpg
-- name: bf-skinner-shipping-container-yard-police-boat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-shipping-container-yard-police-boat.jpg
-- name: udnie-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_E3643.jpg
-- name: gypsymosaic-gypsy-eyes-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-paper.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
-- name: dc-statue-dcstatue-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
-- name: meadowbutterfly-meadow-butterfly-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-space-pizza.jpg
-- name: beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-umberto-bocc.jpg
-- name: white-house-lawn-white-house-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn.jpg
-- name: gypsy-wagon-gypsywagon-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-alberto-giacometti.jpg
-- name: stalin-time-old-building-and-cars_36680898846_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-building-and-cars_36680898846_o.jpg
-- name: berlinwall2-berlinwall-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-- name: oldcabin-store-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-monet-one.jpg
-- name: dragon-desert-desert-dragon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crafty-painting.jpg
-- name: birdhouse-birdhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-constitution.jpg
-- name: bf-skinner-surveillance-over-the-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-over-the-city.jpg
-- name: subway-subway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
-- name: copper-circuit-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-container-ship-sunny-day.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crunch-paper.jpg
-- name: downtheline-downtheline-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
-- name: copper-circuit-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital_36728421355_o.jpg
-- name: art-museum-art-museum-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-collage.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
-- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
-- name: school-clouds-church-clouds-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-oily-mcoilface.jpg
-- name: server-cloud-server-racks-clouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kand-two.jpg
-- name: oldroad-old-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-plentiful.jpg
-- name: mistywoods-babyfoot-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
-- name: fence-mexico-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
-- name: copper-circuit-IMG_4430.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4430.jpg
-- name: la-muse-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-watching-cars.jpg
-- name: downtheline-downtheline-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
-- name: old-cabin-oldcabin-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-asteroids.jpg
-- name: bluelake-green-zuma-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-01-17-38.jpg
-- name: docks-docks-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colorful-dream.jpg
-- name: border-fence-border-fence-on-hill-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-mucha-mult.jpg
-- name: rockingchair-rockingchair-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crafty-painting.jpg
-- name: old-school-house-old-schoolhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse.jpg
+- name: trucksilo-trucksilo-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-light-dali.jpg
+- name: walled-garden-walled-garden-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-green-zuma.jpg
+- name: stories-machine-road-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
+- name: power-lines-power-lines-empty-space-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-free-woman.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alberto-giacometti.JPG
+- name: adam-smith-adam-smith-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-rain.jpg
+- name: yosemite-yosemite-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-matrix.jpg
+- name: nyc-flag-nycflag-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-space-pizza.jpg
+- name: oldhouse-oldhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-pablo-blue.jpg
+- name: bluelake-green-zuma-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-00-00.jpg
+- name: rockingchair-rockingchair-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-emily-carr.jpg
+- name: la-muse-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grafitti-woman-bangs.jpg
+- name: status-berlin-status-berlin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-graham-sutherland.jpg
+- name: catacombs-catacombs-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-mucha-mult.jpg
+- name: razorwire-DSC-0080-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-diego-rivera1.jpg
+- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+- name: mistywoods-babyfoot-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-green-zuma.jpg
+- name: downtown-los-angeles-downtown-la-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-neo-instinct.JPG
+- name: mistywoods-babyfoot-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-missle.jpg
+- name: window-window-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-three.jpg
+- name: server-cloud-server-racks-clouds-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-spagetti-accident.jpg
+- name: server-cloud-server-racks-door-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-creativity.jpg
+- name: crow_blue_circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
+- name: old-door-lock-old-door-lock-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dark-rain.jpg
+- name: status-berlin-status-berlin-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
+- name: oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-granite.JPG
+- name: bf-skinner-stainless-tree-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-stainless-tree-clouds.jpg
+- name: locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-jap-wav-pr.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: store-on-corner-store-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-umberto-bocc.jpg
+- name: old-gas-pumps-oldgaspumps-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-neo-instinct.jpg
+- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+- name: ellis-island-ellis-island-room-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-spagetti-accident.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+- name: mosaic-face-mosaic-face-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-diego-rivera1.jpg
+- name: window-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
+- name: nazi-invasion-vancouver-waterfront_36556357642_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-vancouver-waterfront_36556357642_o.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: white-house-whitehouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
+- name: braceros-domingo-ulloa-nyc-subway-train-125th.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-nyc-subway-train-125th.jpg
+- name: oldhouse-granaryfield-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-blocks.jpg
+- name: bf-skinner-people-eating-canal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-eating-canal.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-3.JPG
+- name: amusement-park-amusement-park-2-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kandinsky-bv.jpg
 ---
 Jackson Leads Vaqueros In Return To Texas Tech.&nbsp;Pastor Says Christmas Is About Hope.&nbsp;Meet The Santa Claus Who Doesn't Celebrate Christmas.&nbsp;Bill Barr Could Be A Bigger Threat To America Than The Man Who Appointed Him.&nbsp;Gifts From The Heart.&nbsp;What To Consider When Buying Marine Parts?.&nbsp;Bob Logan For Bowl Crasher Story.&nbsp;Indoor Rec Center Back Up For Study.&nbsp;
